# qualtrics-pandas

./: README.rst  qualtricspd.py  setup.cfg  setup.py
