[metadata]
description = Qualtrics export to pandas.DataFrame
long_description = file: README.rst
author = Joel Nothman
author_email = joel.nothman@gmail.com
url = https://github.com/Sydney-Informatics-Hub/qualtrics-pandas
license = BSD 3-Clause License
classifiers =
	Programming Language :: Python :: 2
	Programming Language :: Python :: 3
